--- a/CodeZone/Views/Stores/Details.cshtml
+++ b/CodeZone/Views/Stores/Details.cshtml
@@ -27,9 +27,10 @@
             </dl>
 
             <div class="form-group">
-                <a href="/stores/edit/@Model.Id" class="btn btn-outline-primary">Edit</a>
-                <a asp-action="Index" class="btn btn-outline-success">Back to List</a>
+                <a asp-action="ItemsInStore" class="btn btn-outline-success" asp-route-storeId="@Model.Id">Items in Store</a>
 
+                <a href="/stores/edit/@Model.Id" class="btn btn-outline-primary">Edit</a>
+                <a asp-action="Index" class="btn btn-outline-secondary">Back to List</a>
             </div>
         </div>
     </div>
