--- a/CodeZone/Views/Stores/Index.cshtml
+++ b/CodeZone/Views/Stores/Index.cshtml
@@ -17,7 +17,9 @@
         @foreach (var store in Model)
         {
             <tr>
-                <td>@store.Name</td>
+                <td>
+                    <a asp-action="Details" asp-route-id="@store.Id">@store.Name</a>
+                </td>
                 <td>
                     <a asp-action="Details" asp-route-id="@store.Id">Details</a> |
                     <a asp-action="Edit" asp-route-id="@store.Id">Edit</a> |
@@ -26,6 +28,7 @@
             </tr>
         }
     </tbody>
+
 </table>
 
 @section Scripts{
