--- a/CodeZone/Views/Home/Index.cshtml
+++ b/CodeZone/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to StockTask</h1>
+    <p>Explore our features and manage your inventory with ease.</p>
+
+    <div class="mt-4">
+        <a href="@Url.Action("Index", "Stores")" class="btn btn-primary btn-lg mr-3">Manage Stores</a>
+        <a href="@Url.Action("Index", "Items")" class="btn btn-success btn-lg">View Items</a>
+    </div>
 </div>
