--- a/CodeZone/Views/Stores/AddItemToStore.cshtml
+++ b/CodeZone/Views/Stores/AddItemToStore.cshtml
@@ -19,6 +19,8 @@
 
     <input asp-for="StoreId" type="hidden" />
 
+    <div asp-validation-summary="All" class="text-danger"></div>
+
     <button type="submit" class="btn btn-primary">Add Item</button>
 </form>
 
