--- a/CodeZone/Views/Stores/ItemsInStore.cshtml
+++ b/CodeZone/Views/Stores/ItemsInStore.cshtml
@@ -13,8 +13,9 @@
 <h2>Items in Store</h2>
 
 <p>
-    <a asp-action="AddItemToStore" asp-route-storeId="@ViewBag.StoreId" class="btn btn-outline-primary">Add New Item</a>
-    <a asp-action="Index" class="btn btn-outline-success">Back to Stores</a> |
+    <a asp-action="AddItemToStore" asp-route-storeId="@ViewBag.StoreId" class="btn btn-outline-primary">Add Item</a> |
+    <a asp-action="HistoryLog" asp-route-storeId="@ViewBag.StoreId" class="btn btn-outline-info">View History Log</a> |      
+    <a asp-action="Index" class="btn btn-outline-success">Back to Stores</a>
 </p>
 
 <table class="table">
