--- a/CodeZone/Views/Items/Details.cshtml
+++ b/CodeZone/Views/Items/Details.cshtml
@@ -14,7 +14,7 @@
             </dl>
 
             <div class="form-group">
-                <a href="/stores/edit/@Model.Id" class="btn btn-outline-primary">Edit</a>
+                <a href="/items/edit/@Model.Id" class="btn btn-outline-primary">Edit</a>
                 <a asp-action="Index" class="btn btn-outline-success">Back to List</a>
 
             </div>
