--- a/CodeZone/Views/Items/Index.cshtml
+++ b/CodeZone/Views/Items/Index.cshtml
@@ -1,33 +1,45 @@
 ﻿@model List<CodeZone.DAL.Item>
 
-<h2>Our Items</h2>
+<h2 class="text-dark mb-4">
+    Our Items
+</h2>
 
 <p>
-    <a asp-action="Create">Add New Item</a>
+    <a asp-action="Create" class="btn btn-light">
+        <i class="bi bi-plus-circle"></i> Add New Item
+    </a>
 </p>
 
-<table class="table">
-    <thead>
+<table class="table table-bordered table-hover">
+    <thead class="thead-dark">
         <tr>
-            <th>Item Name</th>
-            <th>Actions</th>
+            <th class="text-dark mb-4">Item Name</th>
+            <th class="text-dark mb-4">Actions</th>
         </tr>
+    </thead>
     <tbody>
-            @foreach (var item in Model)
-            {
+        @foreach (var item in Model)
+        {
             <tr>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.Id">@item.ItemName</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-link text-success">
+                        <i class="bi bi-capsule"></i> @item.ItemName
+                    </a>
                 </td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a href="#" onclick="confirmDelete('@item.Id', '@item.ItemName')" class="js-delete" data-item-id="@item.Id">Delete</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary btn-sm">
+                        <i class="bi bi-info-circle-fill"></i> Details
+                    </a> |
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-secondary btn-sm">
+                        <i class="bi bi-pencil-fill"></i> Edit
+                    </a> |
+                    <a href="#" onclick="confirmDelete('@item.Id', '@item.ItemName')" class="btn btn-outline-danger btn-sm js-delete" data-item-id="@item.Id">
+                        <i class="bi bi-trash3-fill"></i> Delete
+                    </a>
                 </td>
             </tr>
-            }
+        }
     </tbody>
-
 </table>
 
 @section Scripts{
