--- a/CodeZone/Views/Stores/Index.cshtml
+++ b/CodeZone/Views/Stores/Index.cshtml
@@ -1,16 +1,19 @@
 ﻿@model List<CodeZone.DAL.Store>
 
-<h2>Our Stores</h2>
+<h2 class="text-dark mb-4">Our Stores</h2>
 
 <p>
-    <a asp-action="Create">Add New Store</a>
+    <a asp-action="Create" class="btn btn-light">
+        <i class="bi bi-plus-circle"></i> Add New Store
+    </a>
 </p>
 
-<table class="table">
-    <thead>
+
+<table class="table table-bordered table-hover">
+    <thead class="thead-dark">
         <tr>
-            <th>Store Name</th>
-            <th>Actions</th>
+            <th class="text-dark mb-4">Store Name</th>
+            <th class="text-dark mb-4">Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -18,17 +21,25 @@
         {
             <tr>
                 <td>
-                    <a asp-action="Details" asp-route-id="@store.Id">@store.Name</a>
+                    <a asp-action="Details" asp-route-id="@store.Id" class="btn btn-link text-success">
+                        <i class="bi bi-geo"></i> @store.Name
+                    </a>
                 </td>
+
                 <td>
-                    <a asp-action="Details" asp-route-id="@store.Id">Details</a> |
-                    <a asp-action="Edit" asp-route-id="@store.Id">Edit</a> |
-                    <a href="#" onclick="confirmDelete('@store.Id', '@store.Name')" class="js-delete" data-store-id="@store.Id">Delete</a>
+                    <button type="button" onclick="window.location='@Url.Action("Details", new { id = store.Id })'" class="btn btn-outline-primary btn-sm">
+                        <i class="bi bi-info-circle-fill"></i> Details
+                    </button> |
+                    <button type="button" onclick="window.location='@Url.Action("Edit", new { id = store.Id })'" class="btn btn-outline-secondary btn-sm">
+                        <i class="bi bi-pencil-fill"></i> Edit
+                    </button> |
+                    <button type="button" onclick="confirmDelete('@store.Id', '@store.Name')" class="btn btn-outline-danger btn-sm js-delete" data-store-id="@store.Id">
+                        <i class="bi bi-trash3-fill"></i> Delete
+                    </button>
                 </td>
             </tr>
         }
     </tbody>
-
 </table>
 
 @section Scripts{
